--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.340.0",
     "react": "^18.2.0",
     "react-countdown-circle-timer": "^3.2.1",
