--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@lottiefiles/lottie-interactivity": "^1.6.2",
     "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-table": "^8.12.0",
     "@testing-library/jest-dom": "^5.17.0",
