--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "framer-motion": "^11.2.9",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.340.0",
     "react": "^18.2.0",
